# ocr-test

./: README.md  main.py  pyproject.toml  server.py
static/: viewer.css  viewer.html  viewer.js
