[project]
name = "ocr-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paddleocr>=2.7.3,<2.8",
    "paddlepaddle-gpu>=2.6.0,<3.0",
    "numpy>=1.23,<2.0",
    "PyMuPDF>=1.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

